# FortranSimpleModel

./: .gitignore  CMakeLists.txt  README.md  plot_results.py
data/: config.yaml
src/: CMakeLists.txt  FortranSimpleModel.f90  fdp_seirs.f90  fdp_simple_model.f90  fortran_simple_model.f90  seirs.f90  seirs_fair.f90
